# topic-explorer

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  add_pagenos.py  ap.ini  app.wsgi  appveyor.yml  benchmark.sh  bottle_ssl.py  bottle_sslify.py  citation.bib  colorlib.py  contributing.html  cookbook.html  corpus_prep.py  coverage.ps1  coverage.sh  demo.sh  docker-compose.yml  genindex.html  getmetadata.py  gitkey  gitkey.pub  htrc.html  htrc.ini  import_export.html  index.html  init.html  intro.html  launch.html  launch.py  make_translation.sh  metadata.html  modules.html  notebook.html  (+22 more)
_sources/: import_export.rst.txt  intro.rst.txt  metadata.rst.txt  notebook.rst.txt
_static/: documentation_options.js
config/: ap.ini  htrc.datacapsule.ini  htrc.ini  sep.ini  sep.prod.ini
demo/: ap.md
demo-data/: ap.py  get-data.sh
docs/: Makefile  conf.py  contributing.rst  cookbook.rst  htrc.rst  import_export.rst  index.rst  init.rst  intro.rst  launch.rst  make.bat  metadata.rst  modules.rst  notebook.rst  prep.rst  rest_api.rst  train.rst  translation.rst
extensions/: ap.py  htrc.py  sep.py
html/: .buildinfo  contributing.html  genindex.html  htrc.html  index.html  init.html  launch.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  train.html
ipynb/: Modeling with VSM.ipynb  Sentence Example.ipynb  Topic Explorer Tutorial.ipynb  Topic-Explorer-Tutorial.py2.ipynb  Topic-Explorer-Tutorial.py3.ipynb  corpus.tmpl.py
locale/: topicexplorer.pot
mmseg/: ancient_words.dic
notebooks/: Modeling with VSM.ipynb
scripts/: htutils  pdfimport  (+2 more)
(+109 files in other folders)
